--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'idea'
 sourceCompatibility = 1.7
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
@@ -14,5 +15,8 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.google.guava', name: 'guava', version: '12.0'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
+    compile group: 'com.auth0', name: 'jawa-jwt', version: '3.2.0-SNAPSHOT'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.2'
+    compile 'commons-validator:commons-validator:1.6'
 }
 
