--- a/build.gradle
+++ b/build.gradle
@@ -18,5 +18,5 @@ dependencies {
     compile group: 'com.auth0', name: 'jawa-jwt', version: '3.2.0-SNAPSHOT'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.2'
     compile 'commons-validator:commons-validator:1.6'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
 }
-
