--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,20 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'checkstyle'
+apply plugin: 'net.saliman.cobertura'
 
 sourceCompatibility = 1.7
+
+buildscript {
+  repositories {
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
+  }
+  dependencies {
+    classpath "net.saliman:gradle-cobertura-plugin:2.5.4"
+  }
+}
 
 repositories {
     mavenLocal()
