--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.google.guava', name: 'guava', version: '12.0'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
     compile group: 'com.auth0', name: 'jawa-jwt', version: '3.2.0-SNAPSHOT'
@@ -34,6 +33,11 @@ dependencies {
     compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.6'
     compile 'commons-validator:commons-validator:1.6'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
+    testCompile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    testCompile 'org.bouncycastle:bcprov-jdk15on:1.58'
 }
 
 checkstyle {
